--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 # cmake_minimum_required(VERSION <specify CMake version here>)
 project(chess C)
-#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DDEBUG") #For Debug mode
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DDEBUG") #For Debug mode
 set(CMAKE_LEGACY_CYGWIN_WIN32 0) # Remove when CMake >= 2.8.4 is required
 set(CMAKE_C_STANDARD 99)
 
